--- a/README
+++ b/README
@@ -10,9 +10,8 @@
 #Usage: install this script as a crontab every X minutes to get stats every X
 #Tips: you can add a discovery rule in zabbix to check a network range and tcp port 5666 to auto-add hosts to group in zabbix
 #
-#TODO: CHANGE SOME MYSQL QUERIES TO ZABBIX API CALLS
+#TODO: CHANGE SOME MYSQL QUERIES TO ZABBIX API CALLS (partial implemented)
 #TODO: USE THREADS TO INCREASE PERFORMANCE
-#TODO: NEED TO CHANGE SOME VARS TO GLOBAL VARS TO CHANGE SOME COMMANDS EASILY 
 #TODO: Learn perl to avoid common mistakes that are (that's for sure) present in this code. Sorry :(
 #
 #Requirementes:
